--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,17 @@
+:root {
+  --color-primary: #84bf9e;
+  --color-secondary: #a6bf80;
+  --color-background: #40594b;
+  --color-foreground: #fff;
+}
+
 * {
   box-sizing: border-box;
 }
 
 body {
-  background-color: #40594b;
-  color: #fff;
+  background-color: var(--color-background);
+  color: var(--color-foreground);
   font-family: Inter, sans-serif;
   line-height: 1.5;
   margin: 0;
@@ -25,6 +32,14 @@ button:disabled {
   cursor: not-allowed;
 }
 
+a {
+  color: inherit;
+}
+
+input {
+  accent-color: var(--color-primary);
+}
+
 h1 {
   font-weight: 300;
   font-size: 3.5rem;
@@ -36,9 +51,9 @@ h1 {
 }
 
 .button {
-  background-color: #275459;
+  background-color: var(--color-primary);
   border-radius: 0.5em;
-  color: #fff;
+  color: var(--color-foreground);
   display: inline-block;
   font-size: 0.875rem;
   padding: 0.5em 1.5em;
@@ -103,8 +118,8 @@ h1 {
 .card-front,
 .card-back {
   backface-visibility: hidden;
-  background-color: white;
-  box-shadow: inset 0 0 0 3px #fff;
+  background-color: #fff;
+  box-shadow: inset 0 0 0 3px currentColor;
   display: grid;
   inset: 0;
   place-items: center;
@@ -112,11 +127,11 @@ h1 {
 }
 
 .card-front {
-  background-color: #84bf9e;
+  background-color: var(--color-secondary);
 }
 
 .card-back {
-  background-color: #a6bf80;
+  background-color: var(--color-secondary);
   color: white;
   transform: rotateY(180deg);
   font-weight: 100;
